--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "firebase": "^10.5.0",
+    "force": "^0.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-countup": "^6.4.2",
